<resources>
    <string name="key_theme" translatable="false">theme</string>
    <string name="key_second_term_start" translatable="false">second_term_start</string>
    <string name="key_load_marks_directly" translatable="false">load_marks_directly</string>
    <string name="key_show_events_legend" translatable="false">show_events_legend</string>
    <string name="key_source_code" translatable="false">source_code</string>
    <string name="key_report_bug" translatable="false">report_bug</string>
    <string name="key_changelog" translatable="false">changelog</string>
    <string name="value_theme_dark" translatable="false">dark</string>
    <string name="value_theme_light" translatable="false">light</string>
    <string name="value_theme_black" translatable="false">black</string>

    <string name="app_name">Quadermas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="welcome_message">Welcome to Quadermas</string>
    <string name="welcome_load_marks">Load marks</string>

    <string name="menu_logout">Logout</string>
    <string name="menu_marks">Marks</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_topics">Topics</string>
    <string name="menu_documents">Documents</string>
    <string name="menu_timetable">Timetable</string>
    <string name="menu_events">Events</string>
    <string name="menu_setup">Setup</string>
    <string name="menu_settings">Settings</string>

    <string name="settings_theme">Theme</string>
    <string name="settings_theme_summary">Choose the app color set</string>
    <string name="settings_theme_light">Light</string>
    <string name="settings_theme_dark">Dark</string>
    <string name="settings_theme_black">Black</string>
    <string name="settings_second_term_start">Start date of second term</string>
    <string name="settings_second_term_start_summary">Used to determine which marks belong to the first term and which to the second - %1$02d/%2$02d</string>
    <string name="settings_load_marks_directly">Load marks directly</string>
    <string name="settings_load_marks_directly_summary">If enabled the app loads marks right after it is opened, otherwise it shows a welcome screen</string>
    <string name="settings_show_events_legend">Show a legend in the events screen</string>
    <string name="settings_about">About</string>
    <string name="settings_source_code">View source code</string>
    <string name="settings_source_code_summary">This app is free and open source!</string>
    <string name="settings_source_code_url" translatable="false">https://github.com/Stypox/mastercom-workbook</string>
    <string name="settings_report_bug">Report bug or request feature</string>
    <string name="settings_report_bug_summary">Have you found something to improve?</string>
    <string name="settings_report_bug_url" translatable="false">https://github.com/Stypox/mastercom-workbook/issues</string>
    <string name="settings_changelog">Version %1$s (%2$d)</string>
    <string name="settings_changelog_summary">Read the changelog and check for updates</string>
    <string name="settings_changelog_url" translatable="false">https://github.com/Stypox/mastercom-workbook/releases</string>

    <string name="activity_title_statistics">Mark statistics</string>
    <string name="activity_title_marks">Mark details</string>
    <string name="activity_title_login">Login to Mastercom workbook</string>

    <string name="type_written">Written</string>
    <string name="type_oral">Oral</string>
    <string name="type_practical">Practical</string>

    <string name="error_malformed_url">Malformed url</string>
    <string name="error_network">Network error</string>
    <string name="error_not_json">Response was not JSON</string>
    <string name="error_unsuitable_json">Unsuitable response JSON</string>
    <string name="error_unsuitable_date">Unsuitable response date</string>
    <string name="error_invalid_credentials">Wrong user or password</string>
    <string name="error_invalid_api_url">Wrong school API url</string>
    <string name="error_user_has_no_subjects">User has no subjects</string>
    <string name="error_could_not_load_a_subject">Could not load a subject</string>
    <string name="error_could_not_load_marks">Could not load marks for subject %1$s</string>
    <string name="error_could_not_load_a_mark">Could not load a mark for subject %1$s</string>
    <string name="error_could_not_load_a_topic">Could not load a topic for subject %1$s</string>
    <string name="error_could_not_load_class">Could not load a class</string>
    <string name="error_could_not_load_a_document">Could not load a document for class %1$s</string>
    <string name="error_could_not_load_documents">Could not load documents for class %1$s</string>
    <string name="error_could_not_load_timetable">Could not load the timetable</string>
    <string name="error_could_not_load_timetable_events">Could not load some events in the timetable</string>
    <string name="error_could_not_load_an_event">Could not load an event</string>
    <string name="error_no_marks">No marks</string>
    <string name="error_no_marks_in_current_term">No marks in current term</string>
    <string name="error_unknown">Unknown error</string>
    <string name="retry">Retry</string>

    <string name="label_marks_average">Marks average</string>
    <string name="label_term">Term:</string>
    <string name="term_first">first</string>
    <string name="term_second">second</string>

    <string name="label_wanted_mark">Wanted mark</string>
    <string name="label_aim_mark">Aim mark:</string>
    <string name="label_remaining_tests">Remaining tests:</string>
    <string name="default_remaining_tests" translatable="false">1</string>

    <string name="login_API_url_explanation">Insert in the field above here the first piece of the url assigned to your school\'s Mastercom workbook. For example, for <i>https://davinci-tn.registroelettronico.com</i> you should insert <b>davinci-tn</b></string>
    <string name="login_API_url">School:</string>
    <string name="login_API_url_hint" translatable="false">davinci-tn</string>
    <string name="login_user">User:</string>
    <string name="login_user_hint" translatable="false">012345</string>
    <string name="login_password">Password:</string>
    <string name="login_password_hint" translatable="false">••••••••</string>
    <string name="login_login">LOGIN</string>

    <string name="action_details">Details</string>
    <string name="action_statistics">Statistics</string>
    <string name="action_topics">Topics</string>
    <string name="action_sort_by_date">Sort by date</string>
    <string name="action_sort_by_value">Sort by value</string>
    <string name="action_select_subject">Select subject</string>
    <string name="action_select_year">Select year</string>
    <string name="action_show_only_assignments">Show only assignments</string>
    <string name="action_clear_filter">Clear filter</string>
    <string name="action_select_day">Select day</string>
    <string name="action_previous_day">Previous day</string>
    <string name="action_next_day">Next day</string>

    <string name="label_overall_average">Overall average</string>
    <string name="label_overall_average_mode">Display average of:</string>
    <string name="overall_average_mode_subjects_rounded_averages">subjects\' rounded averages</string>
    <string name="overall_average_mode_subjects_averages">subjects\' averages</string>
    <string name="overall_average_mode_all_marks">all marks</string>

    <string name="label_marks_chart">Marks</string>

    <string name="label_topic_description">Description</string>
    <string name="label_topic_assignment">Assignment</string>

    <string name="all_years">All school years</string>
    <string name="all_subjects">All subjects</string>

    <string name="empty_timetable">Nothing is scheduled for this day!\nIs it a day off?</string>

    <string name="day">Day</string>
    <string name="month">Month</string>

    <string name="event_time_same_minute" translatable="false">%1$s \u0020\u0020%2$s</string>
    <string name="event_time_same_day" translatable="false">%1$s \u0020\u0020%2$s • %3$s</string>
    <string name="event_time_different_days" translatable="false">%1$s %2$s \u0020\u0020• \u0020\u0020%3$s %4$s</string>
    <string name="event_annotation">Annotation</string>
    <string name="event_event">Event</string>
    <string name="event_in_the_future">In the future</string>
    <string name="event_imminent">Imminent</string>
    <string name="today_is">Today is %s</string>
    <string name="dismiss">Dismiss</string>
    <string name="download_missing_permission">Permission is needed to download</string>
    <string name="download_started">Download started</string>
    <string name="download_complete">Download complete</string>
    <string name="download_error">Download error</string>
    <string name="share">Share</string>

    <string name="two_strings" translatable="false">%s \u0020\u0020• \u0020\u0020%s</string>
    <string name="three_strings" translatable="false">%s \u0020\u0020• \u0020\u0020%s \u0020\u0020• \u0020\u0020%s</string>
    <string name="label_school_municipality" translatable="false">%1$s \u0020\u0020• \u0020\u0020%2$s</string>
    <string name="label_school_municipality_province" translatable="false">%1$s \u0020\u0020• \u0020\u0020%2$s (%3$s)</string>
</resources>
