<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:apiurledit="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.TopicsActivity">

    <include layout="@layout/app_bar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/APIUrlLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_API_url"
            app:layout_constraintBottom_toBottomOf="@+id/APIUrlEdit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/APIUrlEdit" />

        <com.stypox.mastercom_workbook.util.APIUrlEdit
            android:id="@+id/APIUrlEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:drawableEnd="?attr/ic_arrow_drop_down"
            android:drawableRight="?attr/ic_arrow_drop_down"
            android:ems="10"
            android:inputType="text"
            apiurledit:entries="@array/API_urls"
            apiurledit:layout_constraintBottom_toTopOf="@+id/APIUrlDivider"
            apiurledit:layout_constraintHorizontal_bias="0.5"
            apiurledit:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/APIUrlLabel"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/APIUrlDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="?android:attr/listDivider"
            apiurledit:layout_constraintBottom_toTopOf="@+id/userEdit"
            apiurledit:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/APIUrlEdit" />

        <TextView
            android:id="@+id/userLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_user"
            app:layout_constraintBottom_toBottomOf="@id/userEdit"
            app:layout_constraintEnd_toStartOf="@+id/userEdit"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/userEdit" />

        <EditText
            android:id="@+id/userEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/login_user_hint"
            android:inputType="number"
            apiurledit:layout_constraintBottom_toTopOf="@+id/passwordEdit"
            apiurledit:layout_constraintTop_toBottomOf="@+id/APIUrlDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/userLabel" />

        <TextView
            android:id="@+id/passwordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_password"
            app:layout_constraintBottom_toBottomOf="@id/passwordEdit"
            app:layout_constraintEnd_toStartOf="@+id/passwordEdit"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/passwordEdit" />

        <EditText
            android:id="@+id/passwordEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="textPassword"
            apiurledit:layout_constraintBottom_toTopOf="@+id/userPasswordDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/passwordLabel"
            app:layout_constraintTop_toBottomOf="@+id/userEdit" />

        <View
            android:id="@+id/userPasswordDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="?android:attr/listDivider"
            apiurledit:layout_constraintBottom_toTopOf="@+id/loginButton"
            apiurledit:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordEdit" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/login_login"
            apiurledit:layout_constraintBottom_toBottomOf="parent"
            apiurledit:layout_constraintHorizontal_bias="0.5"
            apiurledit:layout_constraintTop_toBottomOf="@+id/userPasswordDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>