<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.EventsActivity">

    <include layout="@layout/app_bar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/futureLegendLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/futureEvent"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/event_in_the_future"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/imminentLegendLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/imminentEvent"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/event_imminent"
            app:layout_constraintBottom_toBottomOf="@+id/futureLegendLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/futureLegendLabel" />

        <View
            android:id="@+id/annotationLegendColor"
            android:layout_width="@dimen/event_legend_color_size"
            android:layout_height="@dimen/event_legend_color_size"
            android:background="@color/annotationEvent"
            app:layout_constraintBottom_toBottomOf="@+id/annotationLegendLabel"
            app:layout_constraintEnd_toStartOf="@+id/annotationLegendLabel"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/annotationLegendLabel" />

        <TextView
            android:id="@+id/annotationLegendLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/event_annotation"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/annotationLegendColor"
            app:layout_constraintTop_toBottomOf="@+id/futureLegendLabel" />

        <View
            android:id="@+id/eventLegendColor"
            android:layout_width="@dimen/event_legend_color_size"
            android:layout_height="@dimen/event_legend_color_size"
            android:background="@color/eventEvent"
            app:layout_constraintBottom_toBottomOf="@+id/eventLegendLabel"
            app:layout_constraintEnd_toStartOf="@+id/eventLegendLabel"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@+id/eventLegendLabel" />

        <TextView
            android:id="@+id/eventLegendLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/event_event"
            app:layout_constraintBottom_toBottomOf="@+id/annotationLegendLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/eventLegendColor"
            app:layout_constraintTop_toTopOf="@+id/annotationLegendLabel" />

        <TextView
            android:id="@+id/dismissLegendButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:paddingVertical="12dp"
            android:text="@string/dismiss"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventLegendLabel" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/legendGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="futureLegendLabel,imminentLegendLabel,dismissLegendButton,annotationLegendColor,annotationLegendLabel,eventLegendColor,eventLegendLabel"
            tools:visibility="visible" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/refreshLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dismissLegendButton">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/eventsList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/item_event" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>